Move TX signing from connector to Yoroi

--- a/yoroi-ergo-connector/main.html
+++ b/yoroi-ergo-connector/main.html
@@ -3,6 +3,10 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <button id="main_disconnect">Disconnect Wallet</button>
+        Whitelist
+        <div id="whitelist"></div>
+        <div>
+            <button id="main_disconnect">Disconnect Wallet</button>
+        </div>
     </body>
 </html>
