--- a/packages/yoroi-ergo-connector/example/index.html
+++ b/packages/yoroi-ergo-connector/example/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico">
     <title>Ergo Test dApp</title>
   </head>
   <body>
