Remove unused code for cardano

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Ergo Test dApp</title>
+    <title>Cardano Test dApp</title>
   </head>
   <body>
     <div id = "balance">Balance: n/a</div>
