Add the cardano-access button

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -6,8 +6,7 @@
     <title>Cardano Test dApp</title>
   </head>
   <body>
-    <div id = "balance">Balance: n/a</div>
-    <div id = "status">Wallet not connected</div>
+    <button id="cardano-access">Request access to yoroi (Cardano)</button>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
   </body>
