Add get_unused_address example

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -6,7 +6,10 @@
     <title>Cardano Test dApp</title>
   </head>
   <body>
-    <button id="cardano-access">Request access to yoroi (Cardano)</button>
+    <button id="request-access">Request access to yoroi (Cardano)</button>
+    <div>
+      <button id="get-unused-addresses">Get Unused Addresses</button>
+    </div>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
   </body>
