Add get_blance example

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -6,7 +6,15 @@
     <title>Cardano Test dApp</title>
   </head>
   <body>
-    <button id="request-access">Request access to yoroi (Cardano)</button>
+    <div>
+      <button id="request-access">Request access to yoroi (Cardano)</button>
+    </div>
+    <div>
+      <button id="get-balance">Get Account Balance</button>
+    </div>
+    <div>
+      <button id="get-unused-addresses">Get Unused Addresses</button>
+    </div>
     <div>
       <button id="get-unused-addresses">Get Unused Addresses</button>
     </div>
