Add getChangeAddress example

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -16,7 +16,10 @@
       <button id="get-unused-addresses">Get Unused Addresses</button>
     </div>
     <div>
-      <button id="get-unused-addresses">Get Unused Addresses</button>
+      <button id="get-used-addresses">Get Used Addresses</button>
+    </div>
+    <div>
+      <button id="get-change-address">Get Change Address</button>
     </div>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
