--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -26,6 +26,9 @@
         <div class="col-6 mb-4">
           <button id="get-change-address" class="btn btn-light" >Get Change Address</button>
         </div>
+        <div class="col-6 mb-4">
+          <button id="get-utxos" class="btn btn-light" >Get Utxos</button>
+        </div>
       </div>
 
       <div class="d-none" id="alert" role="alert"></div>
