Add loading state

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -30,7 +30,7 @@
           <button id="get-utxos" class="btn btn-light" >Get Utxos</button>
         </div>
       </div>
-
+      <div class="d-none" id="spinner" role="status"></div>
       <div class="d-none" id="alert" role="alert"></div>
     </div>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
