Update styling of the cardano example

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -15,22 +15,24 @@
           <button id="request-access" class="btn btn-primary">Request access to yoroi</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-balance"  class="btn btn-light" >Get Account Balance</button>
+          <button id="get-balance"  class="btn btn-light w-100" >Get Account Balance</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-unused-addresses" class="btn btn-light" >Get Unused Addresses</button>
+          <button id="get-unused-addresses" class="btn btn-light w-100" >Get Unused Addresses</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-used-addresses" class="btn btn-light" >Get Used Addresses</button>
+          <button id="get-used-addresses" class="btn btn-light w-100" >Get Used Addresses</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-change-address" class="btn btn-light" >Get Change Address</button>
+          <button id="get-change-address" class="btn btn-light w-100" >Get Change Address</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-utxos" class="btn btn-light" >Get Utxos</button>
+          <button id="get-utxos" class="btn btn-light w-100" >Get Utxos</button>
         </div>
       </div>
-      <div class="d-none" id="spinner" role="status"></div>
+      <div class="w-100 d-flex justify-content-center my-2">
+        <div class="d-none" id="spinner" role="status"></div>
+      </div>
       <div class="d-none" id="alert" role="alert"></div>
     </div>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
