--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -35,6 +35,9 @@
         <div class="col-6 mb-4">
           <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
         </div>
+        <div class="col-6 mb-4">
+          <button id="create-tx" class="btn btn-light w-100">Create Tx</button>
+        </div>
       </div>
       <div class="w-100 d-flex justify-content-center my-2">
         <div class="d-none" id="spinner" role="status"></div>
