Add minting NFT example

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -34,7 +34,10 @@
         <button id="get-utxos" class="btn btn-light w-100">Get Utxos</button>
       </div>
       <div class="col-6 mb-4">
-        <button id="mint-NFT" class="btn btn-light w-100">Mint NFT</button>
+        <button id="mint-assets" class="btn btn-light w-100">Sign Mint assets</button>
+      </div>
+      <div class="col-6 mb-4">
+        <button id="mint-NFT" class="btn btn-light w-100">Sign Mint NFT</button>
       </div>
       <div class="col-6 mb-4">
         <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
