--- a/packages/yoroi-ergo-connector/example-ergo/index.html
+++ b/packages/yoroi-ergo-connector/example-ergo/index.html
@@ -18,7 +18,7 @@
           <button id="request-access" class="btn btn-primary">Request access to yoroi</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="get-balance"  class="btn btn-light w-100" >Get Account Balance</button>
+          <button id="get-balance"  class="btn btn-light w-100" >Get Balance</button>
         </div>
         <div class="col-6 mb-4">
           <button id="get-unused-addresses" class="btn btn-light w-100" >Get Unused Addresses</button>
