--- a/packages/yoroi-ergo-connector/example-ergo/index.html
+++ b/packages/yoroi-ergo-connector/example-ergo/index.html
@@ -7,8 +7,8 @@
     <title>Ergo Test dApp</title>
   </head>
   <body>
-    <div id = "balance">Balance: n/a</div>
-    <div id = "status">Wallet not connected</div>
+    <!-- <div id = "balance">Balance: n/a</div>
+    <div id = "status">Wallet not connected</div> -->
     <div class="container">
       <div class="my-3">
         <h1 class="display-4 text-center">Ergo dApp Example</h1>
@@ -38,11 +38,11 @@
         <div class="col-6 mb-4">
           <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
         </div>
-      </div>
-      <div class="w-100 d-flex justify-content-center my-2">
-        <div class="d-none" id="spinner" role="status"></div>
-      </div>
-      <div class="d-none" id="alert" role="alert"></div>
+        <div class="w-100 d-flex justify-content-center my-2">
+          <div class="d-none" id="spinner" role="status"></div>
+        </div>
+        <div class="d-none" id="alert" role="alert"></div>
+        <div id="sign-tx-container" class="mt-1"></div>
     </div>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
