Reworked connector API to use url as auth-id for now

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -12,7 +12,8 @@
       </div>
       <div class="row">
         <div id="request-button-row" class="col-12 text-center my-3">
-          <button id="request-access" class="btn btn-primary">Request access to yoroi</button>
+          <input type="checkbox" id="check-identification">&nbsp;Request identification</input><br/><br/>
+          <button id="request-access" class="btn btn-primary">Request access to Yoroi</button>
         </div>
         <div id="connection-status" style="display: none" class="col-12 text-center my-3">
           <span style="display: block">Connected to: <b id="wallet-plate">ABCD-1234</b></span>
