--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -11,11 +11,14 @@
         <h1 class="display-4 text-center">Cardano dApp Example</h1>
       </div>
       <div class="row">
-        <div id="request-button-row" class="col-12 text-center my-3">
+        <div class="w-100 d-flex justify-content-center my-2">
+          <div class="d-none" id="spinner" role="status"></div>
+        </div>
+        <div id="request-button-row" class="col-12 text-center my-3 d-none">
           <input type="checkbox" id="check-identification">&nbsp;Request identification</input><br/><br/>
           <button id="request-access" class="btn btn-primary">Request access to Yoroi</button>
         </div>
-        <div id="connection-status" style="display: none" class="col-12 text-center my-3">
+        <div id="connection-status" class="col-12 text-center my-3 d-none">
           <span style="display: block">Connected to: <b id="wallet-plate">ABCD-1234</b></span>
           <span style="display: block" id="wallet-icon"></span>
         </div>
@@ -45,9 +48,6 @@
         <div class="col-6 mb-4">
           <button id="create-tx" class="btn btn-light w-100">Create Tx</button>
         </div>
-      </div>
-      <div class="w-100 d-flex justify-content-center my-2">
-        <div class="d-none" id="spinner" role="status"></div>
       </div>
       <div class="d-none" id="alert" role="alert"></div>
     </div>
