--- a/packages/yoroi-ergo-connector/example-cardano/subpage.html
+++ b/packages/yoroi-ergo-connector/example-cardano/subpage.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="my-3">
-        <h1 class="display-4 text-center">Cardano dApp Example</h1>
+        <h1 class="display-4 text-center">Cardano dApp Example / Cardano</h1>
       </div>
       <div class="row">
         <div class="w-100 d-flex justify-content-center my-2">
@@ -24,33 +24,33 @@
         </div>
         <div class="col-12 text-center my-3" id="connected-row" role="alert">
         </div>
-        <div class="col-6 mb-4">
-          <button id="get-balance"  class="btn btn-light w-100" >Get Account Balance</button>
+        <div style="display: none">
+          <div class="col-6 mb-4">
+            <button id="get-balance"  class="btn btn-light w-100" >Get Account Balance</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="get-unused-addresses" class="btn btn-light w-100" >Get Unused Addresses</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="get-used-addresses" class="btn btn-light w-100" >Get Used Addresses</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="get-change-address" class="btn btn-light w-100" >Get Change Address</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="get-utxos" class="btn btn-light w-100" >Get Utxos</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="submit-tx" class="btn btn-light w-100">Submit Tx</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
+          </div>
+          <div class="col-6 mb-4">
+            <button id="create-tx" class="btn btn-light w-100">Create Tx</button>
+          </div>
         </div>
-        <div class="col-6 mb-4">
-          <button id="get-unused-addresses" class="btn btn-light w-100" >Get Unused Addresses</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="get-used-addresses" class="btn btn-light w-100" >Get Used Addresses</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="get-change-address" class="btn btn-light w-100" >Get Change Address</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="get-utxos" class="btn btn-light w-100" >Get Utxos</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="submit-tx" class="btn btn-light w-100">Submit Tx</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
-        </div>
-        <div class="col-6 mb-4">
-          <button id="create-tx" class="btn btn-light w-100">Create Tx</button>
-        </div>
-        <div class="col-6 mb-4">
-          <a href="/subpage.html">Go to a subpage</a>
-        </div>
+        <a href="/">Go back to main page</a>
       </div>
       <div class="d-none" id="alert" role="alert"></div>
     </div>
