Connector api CIP30 update

--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -37,6 +37,9 @@
           <button id="get-change-address" class="btn btn-light w-100" >Get Change Address</button>
         </div>
         <div class="col-6 mb-4">
+          <button id="get-reward-addresses" class="btn btn-light w-100" >Get Reward Addresses</button>
+        </div>
+        <div class="col-6 mb-4">
           <button id="get-utxos" class="btn btn-light w-100" >Get Utxos</button>
         </div>
         <div class="col-6 mb-4">
