--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -25,6 +25,9 @@
         <div class="col-12 text-center my-3" id="connected-row" role="alert">
         </div>
         <div class="col-6 mb-4">
+          <button id="is-enabled"  class="btn btn-light w-100" >Is Enabled</button>
+        </div>
+        <div class="col-6 mb-4">
           <button id="get-balance"  class="btn btn-light w-100" >Get Account Balance</button>
         </div>
         <div class="col-6 mb-4">
