--- a/packages/yoroi-ergo-connector/example-cardano/index.html
+++ b/packages/yoroi-ergo-connector/example-cardano/index.html
@@ -46,13 +46,13 @@
           <button id="get-utxos" class="btn btn-light w-100" >Get Utxos</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="submit-tx" class="btn btn-light w-100">Submit Tx</button>
+          <button id="create-tx" class="btn btn-light w-100">[Experimental] Create Tx</button>
         </div>
         <div class="col-6 mb-4">
           <button id="sign-tx" class="btn btn-light w-100">Sign Tx</button>
         </div>
         <div class="col-6 mb-4">
-          <button id="create-tx" class="btn btn-light w-100">Create Tx</button>
+          <button id="submit-tx" class="btn btn-light w-100">Submit Tx</button>
         </div>
         <div class="col-6 mb-4">
           <a href="/subpage.html">Go to a subpage</a>
